--- a/prayer.html
+++ b/prayer.html
@@ -25,8 +25,7 @@
 
         <!-- Add your site or application content here -->
 
-            
-     <header class="hem">
+         <header class="hem">
             <div class="container hidden-xs">
                 <div class="row row-eq-height">
                     <div class="col-md-5 text-center logo">
@@ -125,8 +124,8 @@
           <div class="container">
             <div class="row">
               <div class="col-md-7 col-sm-8">
-                <h3 class="black h-sep">Contact <span class="text-extra-bold">Us</span></h3>
-                <p class="fz-16 gray-666 mt-50">We want to hear from you, talk to us today</p>
+                <h3 class="black h-sep">Prayer <span class="text-extra-bold">Request</span></h3>
+                <p class="fz-16 gray-666 mt-50">Feel free to enter your request, we will join you in prayer.</p>
 
                   <div class="mt-30" id="message"></div>
                   <form id="contactform_forms" class="mt-20 checkout-form" method="post" action="contact.php" style="margin-bottom: 10%;">
@@ -187,8 +186,7 @@
           </div>
         </section>
 
-
-    <footer>
+ <footer>
             <div class="upper-footer">
                 <div class="container">
                     <div class="row">
