--- a/index.html
+++ b/index.html
@@ -153,7 +153,7 @@
                     <div class="col-md-12 mt-50 cause-main">
                       <div class="item">
                           <div class="causes-img text-center" style="">
-                              <img src="img/5994.jpg" alt="" class="img-responsive">
+                              <img src="img/5994.jpg" alt="" style="margin-bottom: 11%;" class="img-responsive">
                               <div class="badge-c">
                                   <img src="img/rccg.png">
                               </div>
@@ -206,7 +206,7 @@
         </section>               
                     
         <section class="mt-100">
-            <div class="container">
+            <div class="container" style="padding-bottom: 5%;">
                 <div class="row">
                     <div class="col-md-12 text-center">
                         <h3 class=" black">Events & Happenings
